# ruvector

.github/workflows/: build-gnn.yml  hooks-ci.yml
crates/ruvector-domain-expansion/: Cargo.toml
crates/ruvector-domain-expansion-wasm/: Cargo.toml
crates/ruvector-domain-expansion-wasm/src/: lib.rs
crates/ruvector-domain-expansion/benches/: domain_expansion_bench.rs
crates/ruvector-domain-expansion/src/: lib.rs
crates/ruvector-mincut-gated-transformer/src/: early_exit.rs  ffn.rs  lib.rs  q15.rs  spectral.rs  state.rs
crates/ruvector-mincut-gated-transformer/src/kernel/: qgemm.rs
crates/ruvector-mincut/src/optimization/: simd_distance.rs
crates/ruvector-mincut/tests/: jtree_tests.rs
crates/ruvector-nervous-system/: Cargo.toml
crates/ruvector-nervous-system/examples/: README.md
crates/ruvector-postgres/: Cargo.toml
crates/rvf/rvf-runtime/: Cargo.toml
crates/rvf/rvf-runtime/src/: agi_container.rs  qr_encode.rs
docs/adr/: ADR-017-craftsman-ultra-30b-1bit-bitnet-integration.md
docs/research/: craftsman-ultra-30b-1bit-ddd.md
examples/benchmarks/: Cargo.toml
examples/benchmarks/src/: publishable_rvf.rs
examples/edge/pkg/: README.md  package.json
npm/: package-lock.json
